# tensorflow_training

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  convert_h5_to_savedmodel.py  export.py  models_info.py  pyproject.toml  requirements.txt  test.py  train.py
.github/workflows/: main.yml
config/: train_image_clsf.json  train_image_clsf.yaml  train_image_clsf_josh.json
custom_model/: facenet.py
custom_model/facenet_weights/: README.md
custom_models/: facenet.py  finetuning.py  residual_mlp_classifier.py
data_preparation/: _0_data_duplication.py  _1_create_train_test_split.py  _1_create_train_val_test_split.py  _2_convert_imgs_to_npz.py  _2_convert_imgs_to_tfrecord.py  _3_convert_npz_tfrecord.py  convert_imgs_to_tfrecord.py  create_train_val_test_split.py  dataset_utils.py  duplicate_data.py  extract_frames_from_video_dataset.py  find_corrupt_imgs.py
model_store/facenet_weights/: README.md
model_store/resnet50_places365_weights/: README.md
scripts/: build_docker.sh  conv_h5_to_savedmodel.py  poetry_to_pip_requirements.py  run_docker.sh  run_server.sh
server/: Dockerfile  README.md  inference.py  requirements_server.txt  server.py
server/scripts/: build_server_docker.sh  run_server_docker.sh  start_servers.sh
server/triton_server/: utils.py
tensorflow_training/: config_parser.py
tensorflow_training/logging/: __init__.py  logger.py  tboard_functions.py
tensorflow_training/loss/: losses.py
tensorflow_training/metric/: metrics.py
tests/: integration_test.py
tf_train/: config_parser.py  remove_later_std_headers.py
(+29 files in other folders)
